--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "express": "^4.21.2",
     "fastify": "^5.2.1",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.5",
@@ -19,6 +20,7 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/sequelize": "^4.28.20",
     "@types/sqlite3": "^3.1.11",
