--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
     "fastify": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.7",
     "@types/sequelize": "^4.28.20",
     "@types/sqlite3": "^3.1.11",
