--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "fastify": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
